--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/register": "^7.22.5",
+    "@wdio/allure-reporter": "^8.34.0",
     "@wdio/appium-service": "^8.11.2",
     "@wdio/cli": "^8.11.2",
     "@wdio/local-runner": "^8.11.2",
@@ -22,6 +23,7 @@
     "smokeFeed": "wdio run ./wdio-conf.js --suite smokeFeed"
   },
   "dependencies": {
+    "allure-commandline": "^2.27.0",
     "dotenv": "^16.3.1"
   }
 }
